--- a/templates/dataupload.html
+++ b/templates/dataupload.html
@@ -73,8 +73,8 @@
         </div>
     </div>
 
-    <script type="application/javascript" src="{{ url_for('static', filename='lib/js/materialize.min.js')}}"></script>
-    <script type="application/javascript" src="{{ url_for('static', filename='lib/js/d3.min.js')}}"></script>
-    <script type="application/javascript" src="{{ url_for('static', filename='js/dataupload.js')}}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='lib/js/materialize.min.js')}}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='lib/js/d3.min.js')}}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/dataupload.js')}}"></script>
 </body>
 </html>
