--- a/templates/dataupload.html
+++ b/templates/dataupload.html
@@ -17,6 +17,16 @@
                         <div class="row">
                             <input id="upload" type="file">
                         </div>
+                        <div class="row">
+                            <b>Header</b>
+                            <ul class="collection">
+                                <li class="collection-item"><b>First column:</b> group A</li>
+                                <li class="collection-item"><b>As many columns as you want:</b> filters</li>
+                                <li class="collection-item"><b>Second last column:</b> group B</li>
+                                <li class="collection-item"><b>Last column:</b> value</li>
+                            </ul>
+                            e.g.: <b>Group 1;Filter 1;Filter 2;Filter 3;Group 2;Value</b> <i>(naming of columns is irrelevant)</i>
+                        </div>
                     </form>
                 </div>
             </div>
