added option for custom clustering, improved user session handling

--- a/templates/dataupload.html
+++ b/templates/dataupload.html
@@ -18,6 +18,12 @@
                             <input id="upload" type="file">
                         </div>
                         <div class="row">
+                            <label>
+                                <input id="custom_clustering" type="checkbox" class="filled-in"/>
+                                <span>Custom clustering</span>
+                            </label>
+                        </div>
+                        <div id="header-no-custom-clustering" class="row">
                             <b>Header</b>
                             <ul class="collection">
                                 <li class="collection-item"><b>First column:</b> group A</li>
@@ -26,6 +32,17 @@
                                 <li class="collection-item"><b>Last column:</b> value</li>
                             </ul>
                             e.g.: <b>Group 1;Filter 1;Filter 2;Filter 3;Group 2;Value</b> <i>(naming of columns is irrelevant)</i>
+                        </div>
+                        <div id="header-custom-clustering" class="row">
+                            <b>Header</b>
+                            <ul class="collection">
+                                <li class="collection-item"><b>First column:</b> group A</li>
+                                <li class="collection-item"><b>As many columns as you want:</b> filters</li>
+                                <li class="collection-item"><b>Third last column:</b> group B</li>
+                                <li class="collection-item"><b>Second last column:</b> value</li>
+                                <li class="collection-item"><b>Last column:</b> cluster</li>
+                            </ul>
+                            e.g.: <b>Group 1;Filter 1;Filter 2;Filter 3;Group 2;Value;Cluster</b> <i>(naming of columns is irrelevant)</i>
                         </div>
                     </form>
                 </div>
