--- a/templates/dataupload.html
+++ b/templates/dataupload.html
@@ -115,7 +115,7 @@
           <p id="urlInfoModalText"></p>
         </div>
         <div class="modal-footer">
-            <button class="modal-close btn waves-effect waves-light" type="submit" name="submit" id="submit">OK</button>
+            <button class="modal-close btn waves-effect waves-light" type="submit" name="submit" id="submitModal">OK</button>
         </div>
     </div>
 
